# xstatic-jsencrypt

./: .gitignore  .gitreview  MANIFEST.in  README.txt  setup.cfg  setup.py  tox.ini
xstatic/pkg/jsencrypt/: __init__.py
xstatic/pkg/jsencrypt/data/: jsencrypt.js
