[metadata]
name = XStatic-JSEncrypt
description = JSEncrypt 2.3.1 (XStatic packaging standard)
description-file = README.rst
maintainer = Rob Cresswell
maintainer-email = robert.cresswell@outlook.com
home-page = http://travistidwell.com/jsencrypt/
keywords = jsencrypt xstatic
license = MIT
zip_safe = False

[bdist_wheel]
universal = True
